# sentryshot

./: .gitignore  .gitlab-ci.yml  .golangci.json  Cargo.toml  README.md  addon.go  flake.nix  go.mod  go.sum  installer.sh  nvr.go  package-lock.json  package.json
.devcontainer/: devcontainer.json  post-create.sh
addons/alert/: addon.go  addon_test.go  frontend.go
addons/doods/: README.md  backend.go  backend_test.go  frontend.go  init.go  init_test.go  rgb24.go  rgb24_test.go
addons/doods2/: README.md  addon.go  addon_test.go  backend.go  backend_test.go  config.go  config_test.go  doods.mjs  frontend.go  rgb24.go
addons/inputopts/: addon.go
addons/motion/: README.md  backend.go  backend_test.go  config.go  config_test.go  frontend.go  motion.mjs  zone.go  zone_test.go
addons/status/: status.go  status_test.go
addons/thumbscale/: thumb.go  thumb_test.go
addons/timeline/: README.md  backend.go  backend_test.go  frontend.go  timeline.mjs  timeline.tpl  timeline_test.mjs
addons/watchdog/: watchdog.go  watchdog_test.go
configs/: env.yaml.sample  users.json.sample
configs/.samples/: README.md  addons.conf  env.json  general.json
docs/: 1_Installation.md  2_Configuration.md  3_Development.md  4_API.md  5_Migration.md  6_Object_Detection_Plugin_Development.md  7_Model_Server.md  8_Handle_Tokio_Runtime.md
misc/: .woodpecker.yml  CHANGELOG.md  Dockerfile  make.sh  utils.sh
misc/nix/: README.md  bazel_5.nix  build-aarch64.dockerfile  build-x86_64.dockerfile  ci.dockerfile  ffmpeg.nix  libedgetpu.nix  shell-aarch64.nix  shell-ci.nix  shell-x86_64.nix  tflite.nix
misc/test-stream/: .gitignore  README.md  stream.nix
pkg/ffmpeg/: ffmpeg.go  ffmpeg_test.go
pkg/group/: group.go  group_test.go
pkg/log/: db.go  db_test.go  log.go  log_test.go  query.go  query_test.go  store.go  store_test.go
pkg/monitor/: config.go  config_test.go  monitor.go  monitor_test.go  recorder.go  recorder_test.go
pkg/storage/: crawler.go  crawler_test.go  recording.go  recording_test.go  storage.go  storage_test.go  types.go  types_test.go  video.go  video_test.go
pkg/system/: system.go  system_test.go
pkg/video/: .gitignore  README.md  core.go  core_test.go  data.go  hls_muxer.go  hls_server.go  interfaces.go  log.go  path.go  path_manager.go  path_test.go  rtsp_conn.go  rtsp_server.go  rtsp_session.go  stream.go  types.go
pkg/web/: routes.go  routes_test.go  servecontent.go  web.go
plugins/auth_basic/: Cargo.toml  basic.rs
plugins/auth_none/: Cargo.toml  none.rs
plugins/motion/: Cargo.toml  README.md  config.rs  motion.js  motion.mjs  motion.rs  zone.rs
plugins/motion/js/: components  motion.js  motion_test.js  settings.js
plugins/mqtt/: Cargo.toml  config.rs  mqtt.rs
plugins/object_detection/: Cargo.toml  README.md  backend.rs  config.rs  default_config.toml  detector.rs  label.rs  model.rs  object_detection.rs
plugins/object_detection/js/: libs  objectDetection.js  objectDetection_test.js  vendor
plugins/object_detection/tflite_lib/: Cargo.toml
plugins/object_detection_open_vino_server/: Cargo.toml  open_vino_server.rs
plugins/object_detection_tflite/: Cargo.toml  tflite.rs
plugins/object_detection_tflite/tflite_lib/: lib.rs
plugins/object_detection_tflite/tflite_lib/tflite_sys/: Cargo.toml  build.rs
plugins/object_detection_tflite/tflite_lib/tflite_sys/src/: .ccls  bindings.rs  lib.rs
plugins/object_detection_tflite/tflite_lib/tflite_sys/src/includes/: tensorflowlite_c.h
plugins/openvino/: Cargo.toml  README.md  build.rs  config.rs  detector.rs  openvino.rs
plugins/tflite/: Cargo.toml  README.md  config.rs  default_config.toml  detector.rs  label.rs  model.rs  tflite.js  tflite.mjs  tflite.rs
plugins/tflite/js/: tflite.js  tflite_test.js
plugins/tflite/tflite_lib/: Cargo.toml  lib.rs  nms.rs
plugins/tflite/tflite_lib/tflite_sys/: Cargo.toml  build.rs
plugins/tflite/tflite_lib/tflite_sys/src/: bindgen.sh  bindings.rs  lib.rs  wrapper.c  wrapper.h
plugins/tflite/tflite_lib/tflite_sys/src/includes/: tensorflowlite_c.h
plugins/thumb_scale/: Cargo.toml  thumb.rs
src/common/: Cargo.toml  common.rs  event.rs  monitor.rs  recording.rs  time.rs
src/crawler/: Cargo.toml  crawler.rs  test.rs
src/csv/: Cargo.toml  csv.rs  test.rs
src/db_utils/: Cargo.toml  db_utils.rs  rev_buf_reader.rs
src/env/: Cargo.toml  default_config.tpl  env.rs
src/eventdb/: Cargo.toml  bench.rs  buf_seek_reader.rs  database.rs  eventdb.rs  slow_poller.rs
src/fs/: Cargo.toml  dir_fs.rs  error.rs  fs.rs  map_fs.rs  sub_fs.rs  test.rs  test_fs.rs
src/handler/: Cargo.toml  api.html  handler.rs  test.rs
src/hls/: Cargo.toml  error.rs  hls.rs  init.rs  muxer.rs  part.rs  playlist.rs  segment.rs  segmenter.rs  types.rs
src/log/: Cargo.toml  bench.rs  log.rs  log_db.rs  rev_buf_reader.rs  slow_poller.rs
src/make/: Cargo.toml  make.rs
src/monitor/: Cargo.toml  lib.rs  monitor.rs  recorder.rs  source.rs
src/monitor_groups/: Cargo.toml  groups.rs
src/mp4/: Cargo.toml  mp4.rs  test.rs
src/mp4_streamer/: Cargo.toml  error.rs  init.rs  mp4_streamer.rs  muxer.rs  part.rs  types.rs
src/plugin/: Cargo.toml  object_detection.rs  plugin.rs  types.rs
src/recdb/: Cargo.toml  crawler.rs  disk.rs  migrate.rs  recdb.rs  storage.rs
src/recdb/testdata/migrate/v1/recordings/2000/01/02/m1/: 2000-01-02_03-04-05_m1.json
src/recording/: Cargo.toml  cache.rs  lib.rs  mp4_muxer.rs  readme.txt  recording.rs  video.rs  video_reader.rs
src/rust-embed/: Cargo.toml  embed.rs  readme.txt
src/sentryshot/: Cargo.toml  app.rs  main.rs  rec2mp4.rs
src/storage/: Cargo.toml  storage.rs
src/streamer/: Cargo.toml  boxes.rs  muxer.rs  streamer.rs  test.rs
src/vod/: Cargo.toml  cache.rs  vod.rs
src/web/: Cargo.toml  lib.rs  (+5 more)
start/: start.go  start.sh  start_test.go
utils/: .woodpecker.yml  ci-fmt.sh  ci.sh  find.sh  format-frontend.sh  format-go.sh  format-shell.sh  grep.sh  installer.sh  lines.sh  lint-css-fix.sh  lint-css.sh  lint-go-fix.sh  lint-go.sh  lint-js.sh  lint-shell.sh  run-all.sh  spell-check-fix.sh  spell-check.sh  test-go.sh  test-js.sh  update.sh
(+351 files in other folders)
