[workspace]
members = [
  "plugins/auth_basic",
  "plugins/auth_none",
  "plugins/motion",
  "plugins/mqtt",
  "plugins/object_detection",
  "plugins/object_detection_tflite",
  "plugins/openvino",
  "plugins/thumb_scale",

  "src/sentryshot",
]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2024"
rust-version = "1.85"
license = "GPL-2.0+"

[workspace.dependencies]
sentryshot_convert = "0.1.2"
sentryshot_ffmpeg_h264 = "0.2.1"
sentryshot_filter = "0.1.2"
sentryshot_padded_bytes = "0.1.0"
sentryshot_scale = "0.1.2"
sentryshot_util = "0.1.2"

retina = { git = "https://github.com/Curid/retina", branch = "dts" }

async-channel = "2.0.0"
async-recursion = "1.1.1"
async-trait = "0.1.64"
argon2 = "0.5.0"
axum = { version = "0.8.0", default-features = false, features = [
  "tokio",
  "http1",
  "http2",
  "json",
  "query",
] }
bytes = "1.4.0"
bytesize = "2"
console-subscriber = "0.4"
criterion = { version = "0.5.0", features = ["async_tokio"] }
futures-lite = "2"
headers = "0.4.0"
http = "1.0.0"
httpdate = "1.0.2"
http-body = "1.0.0"
http-body-util = "0.1"
hyper = { version = "1.6", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = [
  "ring",
  "webpki-roots",
  "http1",
] }
hyper-util = { version = "0.1", default-features = false }
jiff = { version = "0.1", default-features = false, features = [
  "serde",
  "tz-system",
] }
jpeg-encoder = "0.6.0"
libloading = "0.8.2"
mime_guess = { version = "2.0.4", default-features = false }
pico-args = "0.5.0"
pin-project = "1.0.12"
pretty_assertions = "1.3.0"
pretty-hex = "0.4.0"
rand = "0.9"
rand_chacha = "0.9"
sha2 = "0.10.8"
serde = { version = "1.0.152", default-features = false, features = ["alloc"] }
serde_json = "1.0.92"
tempfile = "3.16"
test-case = "3"
thiserror = "2"
toml = { version = "0.8.0", default-features = false, features = ["parse"] }
tokio-util = { version = "0.7.7", features = ["io-util"] }
tower = { version = "0.5", default-features = false }
upon = "0.9"
url = { version = "2.5", features = ["serde"] }

[workspace.dependencies.tokio]
version = "1.43.0"
default-features = false
features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"]


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
as_conversions = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
negative_feature_names = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
enum_glob_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
no_effect_underscore_binding = "allow"
similar_names = "allow"


# Strip plugins to reduce size.
[profile.release.package.auth_basic]
strip = true
[profile.release.package.auth_none]
strip = true
[profile.release.package.motion]
strip = true
[profile.release.package.mqtt]
strip = true
[profile.release.package.object_detection]
strip = true
[profile.release.package.object_detection_tflite]
strip = true
[profile.release.package.thumb_scale]
strip = true


[profile.release]
lto = true


[profile.bench]
debug = true
