[package]
name = "object_detection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "object_detection"
path = "object_detection.rs"
crate-type = ["cdylib"]
doctest = false

[dependencies]
object_detection_tflite.path = "../object_detection_tflite"
common.path = "../../src/common"
plugin.path = "../../src/plugin"

sentryshot_convert.workspace = true
sentryshot_filter.workspace = true
sentryshot_scale.workspace = true
sentryshot_util.workspace = true

async-trait.workspace = true
axum.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
url.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
