[package]
name = "openvino"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "openvino"
path = "openvino.rs"
crate-type = ["cdylib"]
doctest = false

[dependencies]
common.path = "../../src/common"
plugin.path = "../../src/plugin"

sentryshot_convert.workspace = true
sentryshot_filter.workspace = true
sentryshot_scale.workspace = true
sentryshot_util.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true

tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
