[package]
name = "tflite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "tflite"
path = "tflite.rs"
crate-type = ["dylib"]
doctest = false

[dependencies]
tflite_lib.path = "./tflite_lib" 
common.path = "../../src/common"
monitor.path = "../../src/monitor"
plugin.path = "../../src/plugin"
recording.path = "../../src/recording"

async-trait.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
sha2.workspace = true
sentryshot_convert.workspace = true
sentryshot_filter.workspace = true
sentryshot_scale.workspace = true
sentryshot_util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
url.workspace = true
async-channel.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
