[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "common"
path = "common.rs"
doctest = false

[dependencies]
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
chrono.workspace = true
http.workspace = true
sentryshot_ffmpeg_h264.workspace = true
sentryshot_padded_bytes.workspace = true
sentryshot_util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true



[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
