[package]
name = "crawler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "crawler"
path = "crawler.rs"
doctest = false

[dependencies]
common.path = "../common"
csv.path = "../csv"
fs.path = "../fs"
recording.path = "../recording"

serde.workspace=true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
