[package]
name = "env"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "env"
path = "env.rs"
doctest = false

[dependencies]
common.path = "../common"

bytesize.workspace = true
serde.workspace = true 
thiserror.workspace = true
toml.workspace = true
upon.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
