[package]
name = "eventdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "eventdb"
path = "eventdb.rs"
doctest = false

[dependencies]
common.path = "../common"
csv.path = "../csv"

bytesize.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true


[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
pretty-hex.workspace = true
tempfile.workspace = true
test-case.workspace = true


[[bench]]
name = "logdb"
path = "./bench.rs"
harness = false
