[package]
name = "log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "log"
path = "log.rs"
doctest = false

[dependencies]
common.path = "../common"
csv.path = "../csv"

bytesize.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
test-case.workspace = true
