[package]
name = "monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "monitor"
path = "monitor.rs"
doctest = false

[dependencies]
common.path = "../common"
log.path = "../log"
recdb.path = "../recdb"
recording.path = "../recording"

async-trait.workspace = true
bytesize.workspace = true
futures-lite.workspace = true
jpeg-encoder.workspace = true
retina.workspace = true
sentryshot_convert.workspace = true
sentryshot_ffmpeg_h264.workspace = true
sentryshot_util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
pretty-hex.workspace = true
test-case.workspace = true
tempfile.workspace = true
