[package]
name = "monitor_groups"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "monitor_groups"
path = "groups.rs"
doctest = false


[dependencies]
common.path = "../common"

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
