[package]
name = "mp4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "mp4"
path = "mp4.rs"
doctest = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio = { features = ["io-util"], workspace = true }


[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
