[package]
name = "mp4_streamer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "mp4_streamer"
path = "mp4_streamer.rs"
doctest = false

[dependencies]
common.path = "../common"
mp4.path = "../mp4"

async-trait.workspace = true
bytes.workspace = true
futures-lite.workspace = true
http.workspace = true
retina.workspace = true
sentryshot_padded_bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
pretty-hex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
