[package]
name = "recdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "recdb"
path = "recdb.rs"
doctest = false

[dependencies]
common.path = "../common"
csv.path = "../csv"
fs.path = "../fs"
recording.path = "../recording"

async-trait.workspace = true
bytesize.workspace = true
serde.workspace=true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
tempfile.workspace = true
