[package]
name = "recording"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "recording"
path = "recording.rs"
doctest = false

[dependencies]
common.path = "../common"
hls.path = "../hls"
mp4.path = "../mp4"

axum.workspace = true
sentryshot_padded_bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
pin-project.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
pretty-hex.workspace = true
tempfile.workspace = true
test-case.workspace = true
