[package]
name = "sentryshot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "sentryshot"
path = "./main.rs"

[dependencies]
common.path = "../common"
csv.path = "../csv"
env.path = "../env"
fs.path = "../fs"
handler.path = "../handler"
hls.path = "../hls"
log.path = "../log"
monitor.path = "../monitor"
monitor_groups.path = "../monitor_groups"
mp4_streamer.path = "../mp4_streamer"
plugin.path = "../plugin"
recdb.path = "../recdb"
recording.path = "../recording"
vod.path = "../vod"
web.path = "../web"
rust-embed.path = "../rust-embed"

axum.workspace = true
bytesize.workspace = true
console-subscriber.workspace = true
hyper.workspace = true
pico-args.workspace = true
rand.workspace = true
thiserror.workspace = true
tower.workspace = true
tokio.workspace = true
tokio-util.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
